fix: NurseService - add startTask, proper in-memory task state management